config-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: config-secret-demo-pod
spec:
  containers:
  - name: demo-container
    image: busybox:1.36
    command: [ "sh", "-c", "env && sleep 3600" ]
