deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  labels:
    app: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello-container
        image: hashicorp/http-echo:0.2.3
        args:
          - "-text=Hello from Deployment 🎉"
        ports:
          - containerPort: 5678
