pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod
  labels:
    app: hello
spec:
  containers:
  - name: hello-container
    image: hashicorp/http-echo:0.2.3
    args:
      - "-text=Hello Kubernetes Workshop 🚀"
    ports:
      - containerPort: 5678
