storage-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-test-pod
spec:
  containers:
  - name: busybox
    image: busybox:1.36
    command: ["sh", "-c", "echo 'Hello PV-PVC!' >> /mnt/data/hello.txt && sleep 3600"]
    volumeMounts:
    - mountPath: /mnt/data
      name: demo-storage
  volumes:
  - name: demo-storage
    persistentVolumeClaim:
      claimName: demo-pvc
