nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-nodeport
spec:
  selector:
    app: hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
      nodePort: 30080
  type: NodePort
